# controllers/user.controllers.js
@@ -1,9 +1,9 @@
 const { PrismaClient } = require("@prisma/client");
 const prisma = new PrismaClient();
 const bcrypt = require("bcrypt");
-const path = require("path");
 const jwt = require("jsonwebtoken");
 const { JWT_SECRET_KEY } = process.env;
+const nodemailer = require("../utils/nodemailer");
 
 module.exports = {
   register: async (req, res, next) => {
@@ -112,4 +112,107 @@ module.exports = {
       next(error);
     }
   },
+  forgetPass: async (req, res, next) => {
+    try {
+      const { email } = req.body;
+      const findUser = await prisma.user.findUnique({ where: { email } });
+
+      if (!findUser) {
+        return res.status(404).json({
+          status: false,
+          message: "user not found",
+          data: null,
+        });
+      }
+      const token = jwt.sign({ email: findUser.email }, JWT_SECRET_KEY);
+      const html = await nodemailer.getHTML("url-resetPass.ejs", {
+        name: findUser.name,
+        url: `${req.protocol}://${req.get('host')}/api/v1/reset-pass?token=${token}`,
+      });
+      await nodemailer.sendMail(email, "Email Forget Password", html);
+      return res.status(200).json({
+        status: true,
+        message: "Success Send Email Forget Password",
+      });
+    } catch (error) {
+      next(error);
+    }
+  },
+  resetPass: async (req, res, next) => {
+    try {
+      const { token } = req.query;
+      const { password, passwordConfirmation } = req.body;
+  
+      if (!password || !passwordConfirmation) {
+        return res.status(400).json({
+          status: false,
+          message: "Both password and password confirmation are required!",
+          data: null,
+        });
+      }
+  
+      if (password !== passwordConfirmation) {
+        return res.status(401).json({
+          status: false,
+          message: "Please ensure that the password and password confirmation match!",
+          data: null,
+        });
+      }
+  
+      let encryptedPassword = await bcrypt.hash(password, 10);
+  
+      jwt.verify(token, JWT_SECRET_KEY, async (err, decoded) => {
+        if (err) {
+          return res.status(403).json({
+            status: false,
+            message: "Invalid or expired token!",
+            data: null,
+          });
+        }
+  
+        const updateUser = await prisma.user.update({
+          where: { email: decoded.email },
+          data: { password: encryptedPassword },
+          select: { id: true, name: true, email: true } 
+        });
+  
+        res.status(200).json({
+          status: true,
+          message: "Your password has been updated successfully!",
+          data: updateUser,
+        });
+      });
+    } catch (error) {
+      next(error);
+    }
+  },  
+  pageLogin: async (req, res, next) => {
+    try {
+      res.render('login.ejs')
+    } catch (error) {
+      next(error);
+    }
+  },
+  pageForgetPass: async (req, res, next) => {
+    try {
+      res.render('forgetPass.ejs')
+    } catch (error) {
+      next(error);
+    }
+  },
+  pageResetPass: async (req, res, next) => {
+    try {
+      let { token } = req.query
+      res.render('resetPass.ejs', {token})
+    } catch (error) {
+      next(error);
+    }
+  },
+  pageNotification: async (req, res, next) => {
+    try {
+      res.render('notification.ejs')
+    } catch (error) {
+      next(error)
+    }
+  }
 };
