# routes/user.routes.js
@@ -1,6 +1,17 @@
 const router = require("express").Router();
-const {register, login, auth, index } = require("../controllers/user.controllers");
-const restrict = require('../middlewares/auth.middlewares')
+const {
+  register,
+  login,
+  auth,
+  index,
+  forgetPass,
+  resetPass,
+  pageLogin,
+  pageForgetPass,
+  pageResetPass,
+  pageNotification,
+} = require("../controllers/user.controllers");
+const restrict = require("../middlewares/auth.middlewares");
 
 // API Users
 router.get("/users", index);
@@ -9,5 +20,15 @@ router.get("/users", index);
 router.post("/auth/register", register);
 router.post("/auth/login", login);
 router.get("/auth/authenticate", restrict, auth);
+
+// API Render Page Ejs
+router.get("/login", pageLogin);
+router.get("/forget-pass", pageForgetPass);
+router.get("/reset-pass", pageResetPass);
+router.get("/notification", pageNotification)
+
+// API Forget Password Email
+router.post("/forget-pass", forgetPass);
+router.post("/reset-pass", resetPass);
 
 module.exports = router;
